k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lemmy-go-solid
  labels:
    app: lemmy-go-solidjs
spec:
  replicas: 1
  template:
    metadata:
      name: lemmy-go-solidjs
      labels:
        app: lemmy-go-solidjs
    spec:
      containers:
      - name: lemmy-go-solidjs
        image: registry.gitlab.com/lemmygo/lemmy-go-solidjs:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: regcred
  selector:
    matchLabels:
      app: lemmy-go-solidjs
