k8s/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: lemmy-go-solidjs-service
  labels:
    app: lemmy-go-solidjs
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: lemmy-go-solidjs
