k8s/frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lemmygo
  labels:
    name: lemmygo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lemmygo-solid
  namespace: lemmygo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: lemmygo-solid
    spec:
      containers:
        - name: lemmygo-solid
          image: registry.gitlab.com/lemmygo/lemmygo-solid:latest
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: regcred
  selector:
    matchLabels:
      app: lemmygo-solid
---
apiVersion: v1
kind: Service
metadata:
  name: lemmygo-service
  namespace: lemmygo
spec:
  selector:
    app: lemmygo-solid
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lemmy-tls-ingress
  namespace: lemmygo
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: lemmy.likwidsage.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lemmygo-service
                port:
                  number: 80
    - host: lemmy-api.likwidsage.com
      http:
        paths:
          - path: /users/
            pathType: Prefix
            backend:
              service:
                name: lemmygo-users-service
                port:
                  number: 8080
          - path: /mcp/
            pathType: Prefix
            backend:
              service:
                name: lemmygo-mcp-service
                port:
                  number: 8090
  tls:
    - hosts:
        - lemmy.likwidsage.com
        - lemmy-api.likwidsage.com
      secretName: lemmygo-cert-tls
