k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lemmy-go-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - lemmy.likwidsage.com
      - lemmy-api.likwidsage.com
      secretName: cert-prod-tls
  rules:
  - host: lemmy.likwidsage.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: lemmy-go-solidjs-service
              port:
                number: 80
  - host: lemmy-api.likwidsage.com
    http:
      paths:
        - path: /Users/
          pathType: Prefix
          backend:
            service:
              name: lemmy-go-users-service
              port:
                number: 8080
